--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
         "axios": "^0.23.0",
         "css-loader": "^6.4.0",
         "file-loader": "^6.2.0",
+        "lodash": "^4.17.21",
+        "lodash.clonedeep": "^4.5.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.5",
+        "redux-thunk": "^2.3.0",
         "style-loader": "^3.3.0"
     },
     "devDependencies": {
